LiveText-LiveText3.14/src/objects/ConfigurationSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Stores the HeyWire OAuth connection detail.</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <inlineHelpText>Account ID for accessing LiveText.To obtain an Account ID please contact us at 1-844-HeyWire (439-9473)</inlineHelpText>
        <label>Account Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <inlineHelpText>Activation Code for the entered Account ID</inlineHelpText>
        <label>Auth Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disconnect_Sound_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable to play a sound when an agent is disconnected from the LiveText console.</inlineHelpText>
        <label>Disconnect Sound Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <inlineHelpText>Url of the connected org</inlineHelpText>
        <label>Endpoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Valid_Credentials__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true, if account credentials entered by user are valid.</description>
        <label>Is Valid Credentials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <inlineHelpText>The HeyWire org type that user wants to connect to.</inlineHelpText>
        <label>Org Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oAuth_URL__c</fullName>
        <description>URL for oAuth</description>
        <inlineHelpText>URL for starting the oAuth flow</inlineHelpText>
        <label>oAuth URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Configuration Settings</label>
</CustomObject>